<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.more.MoreFragment"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp">


            <TextView
                android:id="@+id/profileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/more"
                android:textColor="@color/black"
                android:textScaleX="@dimen/header_height"
                android:textSize="@dimen/big_title_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/profilePictureImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="Mina"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/welcomeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/welcomeTextView" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_32"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="@+id/profilePictureImageView"
        app:layout_constraintEnd_toStartOf="@+id/userNameTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profilePictureImageView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toStartOf="@+id/editProfileTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editProfileTextView" />

    <TextView
        android:id="@+id/logoutTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/text_logout"
        android:textColor="@color/black"
        android:textSize="@dimen/paragraph"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:contentDescription="logout"
        android:src="@drawable/ic_exit"
        app:layout_constraintEnd_toStartOf="@+id/logoutTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logoutTextView" />

    <TextView
        android:id="@+id/editProfileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/text_editprofile"
        android:textColor="@color/black"
        android:textSize="@dimen/paragraph"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureImageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/logoutTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>