<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileViewModel"
            type="com.iti.mad41.tripia.ui.fragment.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.fragment.profile.ProfileFragment">

        <Button
            android:id="@+id/doneButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_64"
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/blue"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/profileToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimary"
                    android:backgroundTint="@color/white"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/padding_8"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/big_title_size" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/changeProfileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:onClick="@{() -> profileViewModel.navigateToGallary()}"
            android:src="@drawable/ic_avater"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/changeNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/white"
            android:hint="@string/hint_changeName"
            android:inputType="textPersonName"
            android:textSize="@dimen/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeProfileImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>